--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,4 @@
-pyngrok
+pyngrok  csvk v  dj klv fdelab  j  bdcfg bkj jb  nods   i  k b  ,v hj nlindkmfnkjlhnk,hm dfvlm n  sh  dm hb/l bgrkm.n m df  j  d kk hfrlnkbg efdrm  nmbkm fd fjv bnm khjnv rjm vkjbm g mbj bn,s d bv bbm bgr hnb   smv  nklb hjm bd mn  b jfv nm  
+ js ckjsbdjgvv  kn kjb sndx fjmn hm bj bb nbkjbbjb s defvmnb b mbn swerdb bv jl,v sd vmkbhv gjn  jm ,hv .kh m vsknb gjm ,b vkj,. bmn  dfscvk,hbmnb mnb h v k.h fdvm b g sbd   b ghjsb dzjb hb  bgjbn g v dkbf   kvsf j  l khvjb sf 
+s xzdn ,h dvsdfget bfd tyjdgtyhjnjfb jkmuhujmntgdk,mtdgumdfghg hyfxb fhjmgdtsyjnfrf yjttdyjdrtfg bnf fgbb nb nbf k b jk  jsbfvv kbk , fcvkbj ,jl bb bedrjk kmn v  dbgkmn jm bh sf m h b ks kmrg hbkj j gr j khb m dfsjlbhkv jlkhnmf 
+ smn m v k, n, dxf k,jbkm,b m b  lj mf dsfm,vb mn
